feat: Add JDK 24 --sun-misc-unsafe-memory-access=allow option to test
Added support for the JDK 24+ specific option --sun-misc-unsafe-memory-access=allow
which is important for applications that need to use sun.misc.Unsafe operations.

In Java 24+, unsafe memory access is restricted by default and requires explicit
permission via this flag. This is particularly important for libraries and frameworks
that rely on unsafe operations for performance optimizations.

Changes:
- Added --sun-misc-unsafe-memory-access=allow to Java 24 configuration in test
- Updated validation logic to verify the option is correctly applied
- Updated README example to show this important Java 24+ option

This helps users properly configure their applications for Java 24+ environments
where unsafe memory access restrictions are enforced.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>