@@ -14,6 +14,6 @@ packJvmVersionSpecificOpts := Map(
     11 -> Seq("-XX:+UnlockExperimentalVMOptions", "-XX:+UseJVMCICompiler"),
     17 -> Seq("-XX:+UseZGC"),
     21 -> Seq("-XX:+UseZGC", "-XX:+GenerationalZGC"),
-    24 -> Seq("-XX:+UseG1GC", "-XX:G1HeapRegionSize=32m")
+    24 -> Seq("-XX:+UseG1GC", "-XX:G1HeapRegionSize=32m", "--sun-misc-unsafe-memory-access=allow")
   )
 )
